# KeysPro

./: .gitignore  KeysPro.spec  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: build.ps1
src/keyspro/: __init__.py  __main__.py  app.py  config.py  logger.py  models.py  processor.py  ui.py
tests/: __init__.py  test_processor.py
