[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "keyspro"
version = "1.0.0"
description = "A Windows desktop utility for converting key text files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter==5.2.2",
    "tkinterdnd2==0.4.3",
]

[project.gui-scripts]
keyspro = "keyspro.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
